correction collapse css

--- a/kasa/src/components/collapse/Collapse.css
+++ b/kasa/src/components/collapse/Collapse.css
@@ -27,6 +27,7 @@
 
   .contentCollapseClose {
     display: none;
+    width: 100%;
   }
 
   .contentCollapseOpen {
