--- a/kasa/src/components/location/Location.css
+++ b/kasa/src/components/location/Location.css
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    min-width: 100%;
 }
 
 .locationCollapse{
